--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   "license": "MIT",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "node index.js",
+    "server": "nodemon index.js"
   },
   "dependencies": {
     "express": "^4.18.2",
+    "load-json-file": "^7.0.1",
+    "nodemon": "^3.0.2",
     "path": "^0.12.7"
   }
 }
